--- a/LoginApi/Src/Presentation/LoginApi.WebApi/HyBrCRM.WebApi.csproj
+++ b/LoginApi/Src/Presentation/LoginApi.WebApi/HyBrCRM.WebApi.csproj
@@ -19,6 +19,9 @@
     <Compile Remove="Controllers\v1\ProductController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Dockerfile" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -42,6 +45,7 @@
     <Folder Include="IndividualUploads\" />
     <Folder Include="LeadDocument\" />
     <Folder Include="logs\" />
+    <Folder Include="wwwroot\" />
     <Folder Include="PurchaseDocument\" />
     <Folder Include="PurchaseUpload\" />
     <Folder Include="VendorUploads\" />
