--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,68 +1,27 @@
-version: '3.8'
-
+version: "3.9"
 services:
-  hybrcrmwebapi:
-    image: aravindr231/hybrcrmwebapi:latest
-    container_name: hybrcrm-webapi
-    ports:
-      - "8080:80"  # Map host port 8080 to container port 80
-      - "8443:443" # Map host port 8443 to container port 443 (if HTTPS is supported)
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      # Common environment variables for web APIs
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://+:80
-      # Add your specific environment variables here
-      # - DATABASE_CONNECTION_STRING=your_connection_string
-      # - API_KEY=your_api_key
-      # - JWT_SECRET=your_jwt_secret
+      - ASPNETCORE_URLS=http://+:8080
+      - ConnectionStrings__DefaultConnection=Server=dbserver1.hybrhind.com;Port=6432;Database=crm_dev_db;User Id=apuser;Password=apuse6@#2260;Command Timeout=0;TimeZone=Asia/Kolkata
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+
+  db:
+    image: postgres:16
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: mydb
     volumes:
-      # Mount volumes for persistent data if needed
-      - ./app-data:/app/data
-      - ./logs:/app/logs
-    networks:
-      - hybrcrm-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  # Optional: Add a database service if your API requires one
-  # database:
-  #   image: postgres:15
-  #   container_name: hybrcrm-db
-  #   environment:
-  #     - POSTGRES_DB=hybrcrmdb
-  #     - POSTGRES_USER=hybrcrm
-  #     - POSTGRES_PASSWORD=your_password
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
-  #   networks:
-  #     - hybrcrm-network
-  #   restart: unless-stopped
-
-  # Optional: Add Redis for caching
-  # redis:
-  #   image: redis:7-alpine
-  #   container_name: hybrcrm-redis
-  #   ports:
-  #     - "6379:6379"
-  #   volumes:
-  #     - redis_data:/data
-  #   networks:
-  #     - hybrcrm-network
-  #   restart: unless-stopped
-
-networks:
-  hybrcrm-network:
-    driver: bridge
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  # postgres_data:
-  # redis_data:
-  app-data:
-  logs:
+  postgres_data:
