--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   api:
-    image: aravindr231/hybrcrmwebapi:latest
+    image: aravindr231/crm-api:latest
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8081
@@ -28,4 +28,5 @@ services:
 
 volumes:
   postgres_data:
+
 
