--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,30 +3,14 @@ version: "3.9"
 services:
   api:
     image: aravindr231/crm-api:latest
+    container_name: api
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8081
-      - ConnectionStrings__DefaultConnection=Server=db;Port=5432;Database=mydb;User Id=postgres;Password=postgres;Command Timeout=0;TimeZone=Asia/Kolkata
-    depends_on:
-      - db
+      - ConnectionStrings__DefaultConnection=Server=dbserver1.hybrhind.com;Port=6432;Database=crm_dev_db;User Id=apuser;Password=apuse6@#2260;Command Timeout=0;TimeZone=Asia/Kolkata
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.rule=Host(`uatcrm-uatcrmapi-fnan3u-ff0cf6-31-97-202-93.traefik.me`)"
       - "traefik.http.routers.api.entrypoints=websecure"
       - "traefik.http.routers.api.tls=true"
       - "traefik.http.services.api.loadbalancer.server.port=8081"
-
-  db:
-    image: postgres:16
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydb
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
-
-
