--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   api:
     image: aravindr231/crmapi:latest
-    container_name: api
+    container_name: crmapi
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:5000
@@ -18,3 +18,4 @@ services:
       - "traefik.http.routers.api.tls=true"
       # Forward traffic to the container's internal port 5000
       - "traefik.http.services.api.loadbalancer.server.port=5000"
+
