--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: LoginApi/Src/Presentation/LoginApi.WebApi/Dockerfile
-    image: hybrcrm.webapi   # <--- must exist if no build-only service
+    image: ${DOCKER_REGISTRY-}hybrcrmwebapi
     ports:
       - "5000:8080"
       - "5001:8081"
