--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  hybrcrm.webapi:
+  Api:
     container_name: hybrcrm-webapi
     build:
       context: .
@@ -12,3 +12,4 @@ services:
       - "5001:8081"
     volumes:
       - ./keys:/keys
+
