--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-version: '3.9'
-
 services:
-  Api:
+  api:
     container_name: hybrcrm-webapi
     build:
       context: .
@@ -12,4 +10,3 @@ services:
       - "5001:8081"
     volumes:
       - ./keys:/keys
-
