--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
+version: '3.9'
+
 services:
   api:
     container_name: hybrcrm-webapi
- build:
-   context: .
-   dockerfile: LoginApi/Src/Presentation/LoginApi.WebApi/Dockerfile
- image: hybrcrmwebapi
- ports:
-   - "5000:8080"
-   - "5001:8081"
- volumes:
-   - ./keys:/keys
- ulimits:
-   nofile:
-     soft: 65535
-     hard: 65535
+    build:
+      context: .
+      dockerfile: LoginApi/Src/Presentation/LoginApi.WebApi/Dockerfile
+    image: hybrcrmwebapi
+    ports:
+      - "5000:8080"
+      - "5001:8081"
+    volumes:
+      - ./keys:/keys
+    ulimits:
+      nofile:
+        soft: 65535
+        hard: 65535
