--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,12 @@ services:
       dockerfile: LoginApi/Src/Presentation/LoginApi.WebApi/Dockerfile
     image: hybrcrmwebapi
     ports:
-      - "8080"   # Exposed internally for Traefik
+       - "8081:8080"   # Exposed internally for Traefik
     volumes:
       - ./keys:/keys   # Persist Data Protection keys
     environment:
       DOTNET_ENVIRONMENT: Production
+      DOTNET_USE_POLLING_FILE_WATCHER: "1" 
     ulimits:
       nofile:
         soft: 65535
@@ -23,3 +24,4 @@ services:
       - "traefik.http.routers.hybrcrm.entrypoints=web,websecure"
       - "traefik.http.routers.hybrcrm.tls=true"
       - "traefik.http.services.hybrcrm.loadbalancer.server.port=8080"
+
